# pyddd

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: FUNDING.yml
dddpy/: value_object.py
dddpy/business/domain_model/: aggregate.py  entity.py  value_object.py  value_object.pyi
docs/: conf.py  index.rst  value_object.rst
test/: test_value_object.py
test/test_business/test_domain_model/: test_aggregate.py  test_value_object.py
